deployment-myapp-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: maypp
    version: v1
  name: myapp-v1
spec:
  selector:
    matchLabels:
      app: myapp
      version: v1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: myapp
        version: v1
    spec:
      containers:
      - image: docker.io/library/nginx
        imagePullPolicy: Always
        name: nginx
        ports:
        - containerPort: 80
          protocol: TCP
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      #serviceAccount: mynginx
      #serviceAccountName: mynginx
      terminationGracePeriodSeconds: 30
