deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-1
  labels:
    app: nginx
spec:
  replicas: 5
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      serviceAccountName: mynginx
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
