rollout-helloworld-v1.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  annotations:
    argocd.argoproj.io/tracking-id: gitops-nginx:apps/Deployment:gitops-nginx/helloworld-v1
  labels:
    app: helloworld
    argocd.argoproj.io/instance: gitops-nginx
    version: v1
    converted-by: rollout-conversion-extension
  name: helloworld-v1
  namespace: gitops-nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: helloworld
      version: v1
  strategy:
    canary:
      canaryService: helloworld-service-canary
      stableService: helloworld-service-stable
      canaryMetadata:
        annotations:
          role: canary
        labels:
          role: canary
      stableMetadata:
        annotations:
          role: stable
        labels:
          role: stable
      steps:
        - setWeight: 10
        - pause:
            duration: 1m
        - setWeight: 25
        - pause:
            duration: 2m
        - setWeight: 50
        - pause:
            duration: 3m
        - setWeight: 75
        - pause:
            duration: 3m
        - setWeight: 100
      abortScaleDownDelaySeconds: 30
      dynamicStableScale: false
      trafficRouting:
        plugins:
          argoproj-labs/gatewayAPI:
            httpRoute: awx-api-test-public
            namespace: gitops-nginx
  workloadRef:
    apiVersion: apps/v1
    kind: Deployment
    name: helloworld-v1
    scaleDown: onsuccess
