service-helloworld-v1-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-v1-service-canary
  labels:
    app: helloworld
    service: helloworld
spec:
  ports:
  - name: http
    port: 80
    targetPort: 5000
    protocol: TCP
  selector:
    app: helloworld
    version: v1
  type: ClusterIP
