service-helloworld-v1-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-v1-service-stable
  labels:
    app: helloworld-v1
    service: helloworld
spec:
  ports:
  - name: http
    port: 80
    targetPort: 5000
    protocol: TCP
  selector:
    app: helloworld
  type: ClusterIP
