service-helloworld.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  labels:
    app: helloworld
    service: helloworld
spec:
  ports:
  - name: http
    port: 5000
    targetPort: 80
  selector:
    app: helloworld
