service-myapp-v1-preview.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myapp
    argocd.argoproj.io/instance: gitops-nginx
    version: v1
    converted-by: rollout-conversion-extension
  name: myapp-v1-preview
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: myapp
    version: v1
  type: ClusterIP
