service-myapp-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-v1
  labels:
    app: myapp
    version: v1
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: myapp
    version: v1
  type: ClusterIP
