service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mynginx
  labels:
    run: mynginx
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    run: mynginx
  type: NodePort
