gateway-myapp.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mynginx-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp-1
spec:
  hosts:
  - "*"
  gateways:
  - mynginx-gateway
  http:
  - match:
    - uri:
        exact: /nginx
    route:
    - destination:
        host: myapp-1
        port:
          number: 80
