httproute-awx.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  labels:
    app: helloworld
    version: v1    
    environment: dev
    istio: ingressgateway
  name: helloworld-v1
spec:
  hostnames:
    - test-canary.awx.kr
  parentRefs:
    - name: public-gateway
      namespace: istio-system
  rules:
    - backendRefs:
        - kind: Service
          name: helloworld-v1-service-stable
          port: 80
    - backendRefs:
        - kind: Service
          name: helloworld-v1-service-canary
          port: 80          
      matches:
        - path:
            type: PathPrefix
            value: /
