httproute-myapp-v1.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  annotations:
    argocd.argoproj.io/tracking-id: gitops-nginx:gateway.networking.k8s.io/HTTPRoute:gitops-nginx/myapp-v1
  labels:
    app: myapp
    argocd.argoproj.io/instance: gitops-nginx
    converted-by: rollout-conversion-extension
    environment: dev
    istio: ingressgateway
    version: v1
  name: myapp-v1
spec:
  hostnames:
    - myapp.awx.kr
  parentRefs:
    - name: public-gateway
      namespace: istio-system
  rules:
    - backendRefs:
        - kind: Service
          name: myapp-v1
          port: 80
          weight: 100
        - kind: Service
          name: myapp-v1-canary
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
