ingress-gitops-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
  name: ingress-gitops-nginx
spec:
  ingressClassName: nginx
  rules:
  - host: gitops-nginx.awx.kr
    http:
      paths:
      - backend:
          service:
            name: helloworld
            port:
              number: 80
        path: /hello
        pathType: Prefix
      - backend:
          service:
            name: myapp-1
            port:
              number: 80
        path: /
        pathType: Prefix
