ingress-mynginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mynginx
  namespace: gitops-nginx
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: nginx
  rules:
  - host: helloworld.awx.kr
    http:
      paths:
      - path: /hello
        backend:
          service:
            name: helloworld
            port:
              name: http
        pathType: Prefix
      - path: /
        backend:
          service:
            name: myapp-1
            port:
              name: http
        pathType: Prefix
